# vq-sigreg

./: .gitignore  LICENSE  README.md  __init__.py  data.py  diffusion_policy.py  models.py  official_lejepa.py  pusht_data.py  pusht_env.py  pusht_policy.py  pusht_rollout.py  pyproject.toml  sigreg.py
configs/: branch2d.yaml  pusht_openloop.yaml
scripts/: branch2d_compare.py  mine_pusht_ambiguous.py  pusht_openloop.py  render_pusht_gif.py  summarize_pusht_code_sweep.py  train_continuous_residual.py  train_dp.py
scripts/diagnostics/: build_pusht_gallery.py  eval_dp_harness.py  render_dp_rollout.py  rollout_oracle_ceiling.py  sanity_check_replay.py
scripts/experiments/: collect_recovery_data.py  train_recovery_branch.py
tests/: test_core.py
